Revision history for Perl module Alien::SDL

Versioning rule: public releases are even numbers, dev releases are odd. (same like perl dist)

TODO
     - check for available libs when using --with-sdl-config option

TBD
     - added patch for SDL::GFX::ImageFilter::MMX_detect (by Steve Langasek, ubuntu bug 1029981) [FROGGS]

1.437_2 Sun Aug 05 2012
     - added minimum Perl version [jtpalmer]
     - added release tests to check pod syntax and coverage [jtpalmer]
     - return ld_shlib_map, ld_shared_libs and ld_paths from config when using script option [jtpalmer]
     - excluding undef paths from ld_shlib_map and ld_shared_libs [jtpalmer]
     - changed shlib regex to match libz and libfreetype [jtpalmer]
     - disabling mmx for SDL_gfx for armv6-unix [jtpalmer]
     - added bin script to make configuring easier [kthakore]
     - added CGFloat patch for darwin/SDL_image [FROGGS]

1.437_1 Mon Jun 25 2012
     - CFLAGS: added several circumstances where we need /usr/X11R7/... [FROGGS]
     - CFLAGS: removed /usr/pkg/..., that clashed on my netbsd [FROGGS]
     - CFLAGS: removed duplicate /usr/X11R6/... [FROGGS]
     - setting LD_LIBRARY_PATH for all BSDs [FROGGS]
     - added missing space in cflags and ldflags [FROGGS]
     - adding rpath linker flag for linux and bsd [FROGGS]

1.436 Tue Jun 19 2012
     - reapplied openbsd-rldflags patch, it got lost during update to SDL-1.2.15 [FROGGS]
     - fixed SDL dirname during Build when applying patches (was SDL-1.2.14, is SDL-1.2) [FROGGS]
     - removed cl from cc_re for gcc binary sets, made new binary set for ActivePerl instead [FROGGS]
     - checking environment on windows when compiler is cl [FROGGS]
     - using vcvars32.bat to set up env on windows [FROGGS]
     - cl compiler prints to stdout instead of stderr, displaying these messages [FROGGS]
     - added libs like ogg to shlib_map, needed for loading these libs at runtime to help msvc [FROGGS]